syntax = "proto3";
package pki.types;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "pki/types/certificate.proto";

message ApprovedCertificatesBySubjectKeyId {
  string subjectKeyId = 1;
  repeated Certificate certs = 2;
}
