syntax = "proto3";
package pki.types;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

message CertificateIdentifier {
  
  string subject = 1; 
  string subjectKeyId = 2; 
}
