syntax = "proto3";
package pki.types;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "pki/types/certificate_identifier.proto";

message ChildCertificates {
  string issuer = 1; 
  string authorityKeyId = 2; 
  repeated CertificateIdentifier certIds = 3; 
  
}

