syntax = "proto3";
package pki.types;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "pki/types/certificate.proto";

message RejectedCertificate {
  string subject = 1; 
  string subjectKeyId = 2; 
  repeated Certificate certs = 3;
}

